[package]
name = "jmt-pq"
version = "0.12.0"
authors = [
    "sam0x17",
    "Penumbra Labs <team@penumbralabs.xyz>",
    "Diem Association <opensource@diem.com>",
]
description = "PQ Jellyfish Merkle Tree"
repository = "https://github.com/sam0x17/jmt-pq"
license = "Apache-2.0"
edition = "2024"

keywords = ["merkle-tree", "authenticated", "post-quantum", "pq", "jellyfish"]
categories = ["cryptography", "data-structures"]
publish = true

[features]
default = ["ics23", "std", "sha2"]
mocks = ["dep:parking_lot"]
blake3_tests = ["dep:blake3"]
std = ["dep:thiserror"]
migration = []

[dependencies]
anyhow = "1"
borsh = { version = "1" , features = ["derive", "de_strict_order"] }
digest = "0"
hashbrown = "0"
itertools = { version = "0", default-features = false }
mirai-annotations = "1"
parking_lot = { version = "0", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1", optional = true }
sha2 = { version = "0", optional = true }
blake3 = { version = "1", optional = true, features = ["traits-preview"] }
hex = "0"
tracing = "0"
ics23 = { version = "0", optional = true }

[dev-dependencies]
hex = { version = "0.4", features = ["serde"] }
rand = { version = "0" }
parking_lot = { version = "0" }
serde_json = { version  = "1" }
proptest = { version = "1" }
proptest-derive = { version = "0" }
sha2 = "0"
